# Aktsii

./: Cargo.toml  Dockerfile  README.md
backend/: Cargo.toml
backend/src/models/: stocks.rs
backend/src/routes/: api.rs
backend/src/utils/: mod.rs
ml-service/: app.py
ml-service/src/: routes.py
src/: main.rs
src/models/: stocks.rs
src/routes/: api.rs  error.rs
src/service/: stock_service.rs
src/utils/: config.rs
